# flowd

./: Cargo.toml  README.md  install.py
src/: lib.rs
src/core/: config.rs  db.rs  mod.rs
src/core/dbus/: mod.rs
src/core/download/: mod.rs  tests.rs  utils.rs
src/resources/config/: config.toml
src/resources/db/migrations/: 1.sql
src/tests/: mod.rs
src/utils/: mod.rs  path.rs  tests.rs
