[package]
name = "flow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["default"] }
toml = { version = "0.8.12", features = ["preserve_order"] }
serde = { version = "1.0.200", features = ["derive"] }
mime_guess = "2.0.4"
log = "0.4.20"
rusqlite = "0.29.0"
chrono = "0.4.31"
zbus = { version = "4.2.0", default-features = false, features = ["tokio"] }
shellexpand = "3.1.0"
rand = "0.8.5"
env_logger = "0.10.0"
event-listener = "4.0.0"
zbus_macros = "4.0.1"
regex = "1.10.3"
urlencoding = "2.1.3"
thiserror = "1.0.58"

[lib]
name = "flow_lib"
path = "src/lib.rs"

[[bin]]
name = "flowd"
path = "src/bin/flowd.rs"
